[project]
name = "phi-c"
version = "0.1.0"
description = "The Φ_c boundary operator — a self-verifying agentic loop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
web = ["httpx>=0.24"]

[project.scripts]
phi-c = "phi_c.agent:_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phi_c"]
