[project]
name = "odot"
version = "0.1.0"
description = "The ⊙perator — a self-verifying agentic loop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
web = ["httpx>=0.24"]

[project.scripts]
odot = "odot.agent:_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odot"]
